<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hongbang.ic.activity.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/login_bg" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/login_form_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="@dimen/login_margin_top"
            android:background="@drawable/login_edit_bg"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_login_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableLeft="@drawable/login_edit_phone"
                android:drawablePadding="10dp"
                android:hint="@string/hint_phone"
                android:inputType="phone"
                android:lines="1"
                android:maxLength="11"
                android:padding="15dp"
                android:textColorHint="@color/hint_color" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_line_color" />

            <EditText
                android:id="@+id/edit_login_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableLeft="@drawable/login_edit_pwd"
                android:drawablePadding="10dp"
                android:hint="@string/hint_pwd"
                android:inputType="textWebPassword"
                android:maxLength="16"
                android:padding="15dp"
                android:textColorHint="@color/hint_color" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_form_area"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/sel_login_btn_bg"
            android:padding="@dimen/green_btn_padding"
            android:text="@string/login_btn_text"
            android:textColor="@color/white"
            android:textSize="@dimen/btn_text_size"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_login_sign_up"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical|right"
                android:padding="15dp"
                android:text="@string/login_sign_up"
                android:textColor="@drawable/clickable_text"
                android:textSize="@dimen/btn_text_size_small" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="12dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/btn_forget"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical|left"
                android:padding="15dp"
                android:text="@string/login_forget"
                android:textColor="@drawable/clickable_text"
                android:textSize="@dimen/btn_text_size_small" />
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>